Fix sidebar overflow.

--- a/app/webroot/css/transit.css
+++ b/app/webroot/css/transit.css
@@ -77,6 +77,7 @@ body {
 	top:0px;
 	padding: 10px;
 	background: #eee;
+    overflow: scroll;
 }
 
 #sidebar #loading_info_spinner {
